# Toreador

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/Toreador/: Toreador.hpp
include/Toreador/Core/Application/: Application.hpp
include/Toreador/Core/Math/: Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Toreador/Core/Math/Matrix/: Matrix2x2.hpp  Matrix3x3.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
src/Toreador/Core/Application/: Application.cpp
src/Toreador/Core/Math/: Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Toreador/Core/Math/Matrix/: Matrix2x2.cpp  Matrix3x3.cpp
src/Toreador/Util/: System.cpp
